[tool.poetry]
name = "wine-tasting-demo"
version = "0.1.0"
description = "This is the companion code repository for the Wine-Tasting Demo App featured in the flask-jeroboam tutorial."
authors = ["Jean-Christophe Bianic <jc.bianic@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask-jeroboam = "^0.1.0b2"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
pre-commit = "^3.1.1"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.isort]
profile = "black"
force_single_line = true